testdata/bad/dateWith2DigitYear.ion
// Timestamp must have 4-digit year.
69-02-23
